# telegram-mini-earn-cloudflare

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  wrangler.toml
frontend/: app.js  index.html  styles.css
migrations/: 0001_initial.sql  0002_delayed_referral_bonus.sql  0002_spin.sql  0003_update_channel_tasks.sql  0005_game_economy.sql
tests/: test_rules.py
worker/: main.py  requirements.txt
